# sysmonitor-widget

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  sysmonitor-widget.spec
.github/workflows/: build.yml
scripts/: install_autostart.py  remove_autostart.py
