[project]
name = "sysmonitor-widget"
version = "0.1.0"
description = "A Windows desktop system monitor widget built with PySide6 and psutil."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "pyside6>=6.11.1",
]

[project.scripts]
sysmonitor-widget = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pyinstaller]
name = "sysmonitor-widget"
script = "main.py"
options = ["--onefile", "--windowed", "--icon=NONE"]
